--- a/index.html
+++ b/index.html
@@ -1,4 +1,95 @@
 <title>MyPortfolio</title>
-<h1>this is it</h1>
-<h2>this</h2>
-<p><b><i>VISHAL PALIWAL</i></b></p>
+<center><header>Vishal Paliwal<header>
+<h1>vishal.paliwal003@gmail.com | (+91) 989 7901 332 | <h1>
+ <h1>E-1 Durgesh Colony, Surendra Nagar, Aligarh-202001(UP), INDIA</h1></center>
+
+EXPERIENCE
+Associate Consultant	     							    (Dec 2017 - Present)
+Capgemini, Mumbai 									
+•	Worked on Google Cloud Platform – BigQuery, Dataflow and App Engine, etc.
+•	One year experience in designing Dataflow pipelines in Python to perform ETL operations on BigQuery tables.
+•	Worked as an ETL Developer and design solutions using tools like SSIS, SSRS, and IBM Datastage.
+•	Two year experience in development of packages (on ETL tools including SSIS and Datastage) for performing ETL operations on various types of data sources.
+•	Simultaneously, have an experience to perform on-call support activities for already existing jobs in Datastage and SSIS. 
+
+Technical Intern							           (June 2016 – July 2016)
+IBM, Noida
+•	Web app named Tourist Guidance System. DISCOVER
+•	Deployed on IBM Bluemix Cloud Foundry Apps. 
+•	Front end designed by CSS/Bootstrap/J-Query and backend work done by JSP and MySQL.
+
+Technical Intern	  						           (June 2016 – July 2016)
+GlobalLogic, Noida
+•	A JSP web application developed under Spring framework. 
+•	Can perform various tasks like resize, rotate, pad, etc.
+•	A library of Spring named ImgScalr is used. 
+
+CERTIFICATIONS
+
+Google Cloud Certified | G Suite
+Issue Date: 13 Jun 2019 | Expiration Date: 13 Jun 2021
+Certification ID: e87La5
+
+SKILLS
+Key Areas: 							          GCP (Google Cloud Platform),
+								          AWS (Amazon Web Services),
+								          ETL Development (SSIS)
+								          Reporting (SSRS)
+ETL Tools:							          Dataflow, IBM Datastage, SSIS
+Database:							          BigQuery, IBM Netezza, Oracle,                  
+          MS SQL Server, IBM DB2
+Languages:							          Python, SQL, PL/SQL, C, Shell 
+          Scripting
+Operating Systems:						          UNIX, Windows
+
+
+
+
+LANGUAGES
+
+Languages	Speak	Read	Write
+English	Fluent	Fluent	Fluent
+Hindi (Native)	Fluent	Fluent	Fluent
+
+PROFILE
+LinkedIn: 						    https://in.linkedin.com/vishal-paliwal719401ab
+TechGig:						               https://www.techgig.com/vishalpaliwal3
+
+
+PROJECTS
+Tourist Guidance System – DISCOVER 					        (June –July 2016)
+•	Web app deployed on IBM cloud platform.
+
+Image Processing Draft 							        (June –July 2016)
+•	 Web app used for scaling various images through spring framework.
+
+Android Chat App 								        (June –July 2016)
+•	Simple client-server chat application using Swing.
+
+VoIP (Voice Calling App) 							         (Aug – Dec 2016)
+•	Can connect two systems through LAN for audio calling.
+
+Social Networking Site (The Network) 					          (Jan – May 2016)
+•	Simple website like Facebook with basic features like adding friend, uploading photos, etc.
+
+3D Snake Game 								          (Jan – May 2016)
+•	Remake of the classic Nokia arcade game using C and Graphics Library (OpenGL).
+
+
+
+ACADEMIC QUALIFICATION
+University Institute of Engineering & Technology, 					   (2013 – 2017)
+CSJM University, Kanpur 
+Bachelor of Technology, Information & Technology (First Division)
+
+PERSONAL DETAILS
+Name: 			Vishal Paliwal
+Designation: 		Associate Consultant
+Birth Date: 		18/03/1996
+Residence: 		Mumbai
+Nationality: 		Indian
+Marital Status:		Unmarried
+Gender: 		Male
+Passport:		P4462618
+				
+
